plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id "org.sonarqube" version "3.5.0.2730"
}

group = 'park.bumsiku'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

sonar {
    properties {
        property "sonar.projectKey", "blog-core"
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-aop'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.ai:spring-ai-starter-model-openai:1.0.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12'
    implementation 'com.sksamuel.scrimage:scrimage-core:4.3.1'
    implementation 'com.sksamuel.scrimage:scrimage-webp:4.3.1'
    implementation 'software.amazon.awssdk:s3:2.31.35'
    implementation 'net.logstash.logback:logstash-logback-encoder:8.1'
    implementation 'com.oracle.database.jdbc:ojdbc10:19.27.0.0'
    implementation 'com.oracle.database.security:oraclepki:23.8.0.25.04'
    implementation 'com.oracle.database.security:osdt_core:21.18.0.0'
    implementation 'com.oracle.database.security:osdt_cert:21.18.0.0'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
